src/book-productpage/k8s/deploy-product.yaml
##################################################################################################
# Productpage services
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: productpage
  namespace: jk-app
  labels:
    app: productpage
    service: productpage
spec:
#  type: LoadBalancer
  ports:
  - port: 9080
    name: http
    # targetPort: 9080
  selector:
    app: productpage
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productpage
  namespace: jk-app
  labels:
    app: productpage
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: productpage
      version: v1
  template:
    metadata:
      labels:
        app: productpage
        version: v1
    spec:
      serviceAccountName: bookinfo-productpage
      containers:
      - name: productpage
        image: AWS_ECR_URI
        imagePullPolicy: Always
        ports:
        - containerPort: 9080
        resources:
          requests:
            cpu: "200m"
          limits:
            cpu: "500m"
        volumeMounts:
        - name: tmp
          mountPath: /tmp
        securityContext:
          runAsUser: 1000
      volumes:
      - name: tmp
        emptyDir: {}
---
