src/book-productpage/k8s/ingress_mesh_virtual_gateway.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gsbook-ingress
  namespace: jk-app
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:424202621926:certificate/1eed1de1-468f-441c-b042-65c63a8863a0
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-2016-08
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80,"HTTPS": 443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    external-dns.alpha.kubernetes.io/hostname: gsbook.skisaki.shop
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
    - host: gsbook.skisaki.shop
      http:
        paths:
          - backend:
              serviceName: ingress-gw
              servicePort: 80
