src/book-productpage/k8s/virtual-product-add.yaml
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: productpage
  namespace: jk-app
spec:
  awsName: productpage
  provider:
    virtualNode:
      virtualNodeRef:
        name: productpage
